##Text encoding: utf-8

2011-03-07  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/atom.cc: more work on parity import.
	* libs/gcu/chain.cc: implement some chain structure analysis.
	* libs/gcu/chain.h: ditto.

2011-03-05  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/atom.cc: more work on parity import.
	* libs/gcu/chain.cc: ditto.
	* libs/gcu/chain.h: ditto.

2011-03-04  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/atom.cc: more work on parity import.
	* libs/gcp/atom.h: ditto.
	* libs/gcp/molecule.cc: ditto.
	* libs/gcp/molecule.h: ditto.

2011-03-03  Jean Bréfort  <jean.brefort@normalesup.org>
	* Makefile.am: add a new GL offscreen rendering external process.
	* configure.ac: ditto.
	* libs/gcp/atom.cc: fixed a test.
	* osmesa/Makefile.am: new GL offscreen rendering external process.
	* osmesa/osmesaserv.cc: ditto.
	* osmesa/socket.cc: ditto.
	* osmesa/socket.h: ditto.

2011-03-02  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: add all GSettings schemas.
	* libs/gcp/atom.cc: more work on parity import.
	* libs/gcp/atom.h: ditto.
	* libs/gcp/molecule.cc: ditto.
	* libs/gcp/molecule.h: ditto.
	* libs/gcu/objprops.h: ditto.
	* plugins/paint/arrows/Makefile.am: add all GSettings schemas.
	* plugins/paint/arrows/org.gnome.gchemutils.paint.plugins.arrows.gs
	chema.xml.in.in: ditto.
	* schemas/Makefile.am:
	* schemas/org.gnome.gchemutils.crystal.gschema.xml.in.in: ditto.
	* schemas/org.gnome.gchemutils.gschema.xml.in.in: ditto.
	* schemas/org.gnome.gchemutils.paint.gschema.xml.in.in: ditto.

2011-03-01  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/atom.cc: import parity.
	* libs/gcp/atom.h: ditto.
	* libs/gcp/molecule.cc: store atoms with known parity,still need to do
	something with that.
	* libs/gcp/molecule.h: ditto.
	* libs/gcu/chem3ddoc.cc: delete rhe view from the destructor.
	* libs/gcu/objprops.h: add ATOM_PARITY property.
	* libs/gcu/printable.cc: unref the GOConfNode.